tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-switch-case.wyst
module syntax.removed_switch_case

enum Event { idle }

fn rejected(event: Event) {
  switch event { case idle: {} }
}
